--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>YOUR_NAME — Software Startup Coach (AI, Teams, MVP, Launch)</title>
+  <title>Serge Ivo — Software Startup Coach (AI, Teams, MVP, Launch)</title>
   <meta name="description" content="I help founders start smarter, form scrappy teams, and launch software products faster with AI-assisted strategy, MVP sprints, and go-to-market coaching." />
   <meta name="theme-color" content="#0ea5e9" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="YOUR_NAME — Software Startup Coach" />
+  <meta property="og:title" content="Serge Ivo — Software Startup Coach" />
   <meta property="og:description" content="AI-assisted strategy, team formation, MVP sprints, and launch for software founders." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.online/" />
-  <meta property="og:image" content="https://yourdomain.online/og-image.jpg" />
+  <meta property="og:url" content="https://sergeivo.online/" />
+  <meta property="og:image" content="https://sergeivo.online/og-image.jpg" />
 
   <!-- Tailwind (CDN for quick start) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Gentle grain background */
     body { background-image: radial-gradient(1200px 600px at 10% -10%, rgba(14,165,233,0.12), transparent), radial-gradient(1000px 500px at 110% 10%, rgba(99,102,241,0.12), transparent); }
   </style>
 </head>
@@ -26,12 +25,11 @@
   <header class="sticky top-0 z-30 backdrop-blur bg-white/70 border-b border-slate-200">
     <div class="mx-auto max-w-6xl px-4 py-3 flex items-center justify-between">
       <a href="#" class="flex items-center gap-2">
-        <!-- Simple inline logo -->
-        <svg width="28" height="28" viewBox="0 0 24 24" class="rounded-xl shadow-sm">
+        <svg width="28" height="28" viewBox="0 0 24 24" class="rounded-xl shadow-sm" aria-hidden="true">
           <circle cx="12" cy="12" r="12" fill="#0ea5e9"></circle>
           <path d="M7 13l3 3 7-7" stroke="white" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <span class="font-semibold">YOUR_NAME</span>
+        <span class="font-semibold">Serge Ivo</span>
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="#services" class="hover:text-slate-900 text-slate-600">Services</a>
@@ -266,7 +264,7 @@
       <div class="mt-5 flex flex-wrap gap-3">
         <a href="https://calendly.com/your-link" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Book a Call</a>
         <a href="mailto:your@email.com" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Email Me</a>
-        <a href="#" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/your-link" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">LinkedIn</a>
       </div>
     </div>
   </section>
@@ -274,22 +272,22 @@
   <!-- Footer -->
   <footer class="mx-auto max-w-6xl px-4 pb-10">
     <div class="text-sm text-slate-500">
-      © 2025 YOUR_NAME — Software Startup Coach. All rights reserved.
+      © 2025 Serge Ivo — Software Startup Coach. All rights reserved.
       <span class="block mt-1">Privacy: I only use anonymised analytics to improve the site.</span>
     </div>
   </footer>
 
-  <!-- JSON-LD (update with your real details) -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
-    "name": "YOUR_NAME — Software Startup Coach",
+    "name": "Serge Ivo — Software Startup Coach",
     "description": "Coaching for software founders: AI-assisted strategy, team formation, MVP sprints, and launch.",
     "areaServed": "Global",
-    "url": "https://yourdomain.online/",
-    "logo": "https://yourdomain.online/logo.png",
-    "image": "https://yourdomain.online/og-image.jpg",
+    "url": "https://sergeivo.online/",
+    "logo": "https://sergeivo.online/logo.png",
+    "image": "https://sergeivo.online/og-image.jpg",
     "sameAs": [
       "https://www.linkedin.com/in/your-link"
     ],
@@ -305,7 +303,7 @@
     },
     "provider": {
       "@type": "Person",
-      "name": "YOUR_NAME",
+      "name": "Serge Ivo",
       "jobTitle": "Software Startup Coach"
     }
   }
