--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Serge Ivo — Software Startup Coach (AI, Teams, MVP, Launch)</title>
-  <meta name="description" content="I help founders start smarter, form scrappy teams, and launch software products faster with AI-assisted strategy, MVP sprints, and go-to-market coaching." />
+  <title>Serge Ivo — Software Startup Coach & Motivational Speaker</title>
+  <meta name="description" content="Serge Ivo helps founders start smarter, form scrappy teams, and launch software products faster with AI. Keynotes & workshops that inspire people to think bigger and build." />
   <meta name="theme-color" content="#0ea5e9" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Serge Ivo — Software Startup Coach" />
-  <meta property="og:description" content="AI-assisted strategy, team formation, MVP sprints, and launch for software founders." />
+  <meta property="og:title" content="Serge Ivo — Software Startup Coach & Motivational Speaker" />
+  <meta property="og:description" content="AI-assisted strategy, team formation, MVP sprints, and inspiring talks that get people building." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://sergeivo.online/" />
   <meta property="og:image" content="https://sergeivo.online/og-image.jpg" />
 
-  <!-- Tailwind (CDN for quick start) -->
+  <!-- Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background-image: radial-gradient(1200px 600px at 10% -10%, rgba(14,165,233,0.12), transparent), radial-gradient(1000px 500px at 110% 10%, rgba(99,102,241,0.12), transparent); }
@@ -33,8 +33,9 @@
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="#services" class="hover:text-slate-900 text-slate-600">Services</a>
+        <a href="#speaking" class="hover:text-slate-900 text-slate-600">Speaking</a>
         <a href="#packages" class="hover:text-slate-900 text-slate-600">Packages</a>
-        <a href="#process" class="hover:text-slate-900 text-slate-600">Process</a>
+        <a href="#events" class="hover:text-slate-900 text-slate-600">Events</a>
         <a href="#faq" class="hover:text-slate-900 text-slate-600">FAQ</a>
         <a href="#contact" class="hover:text-slate-900 text-slate-600">Contact</a>
         <a href="https://calendly.com/your-link" class="bg-slate-900 text-white px-4 py-2 rounded-xl hover:bg-slate-800">Book a Call</a>
@@ -48,14 +49,14 @@
     <div class="grid md:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">
-          Software Startup Coach — <span class="text-sky-600">Start Faster. Build Smarter. Launch with AI.</span>
+          Software Startup Coach <span class="text-slate-400">&</span> <span class="text-sky-600">Motivational Speaker</span>
         </h1>
         <p class="mt-5 text-lg text-slate-600">
-          I help founders go from idea to launched software product. We’ll crystalize your strategy, form the right team, run a focused MVP sprint, and ship — using AI to speed up everything.
+          I help founders go from idea to launched software product. We’ll crystallise your strategy, form the right team, run a focused MVP sprint, and ship — using AI to speed up everything.
         </p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="https://calendly.com/your-link" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Free 20-min Discovery Call</a>
-          <a href="#packages" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">See Packages</a>
+          <a href="#speaking" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Book a Talk</a>
         </div>
         <p class="mt-3 text-sm text-slate-500">Specialised in <strong>software products only</strong> — web, mobile, SaaS.</p>
       </div>
@@ -74,8 +75,28 @@
     </div>
   </section>
 
+  <!-- AI Double-Edged Sword Banner -->
+  <section id="events" class="mx-auto max-w-6xl px-4">
+    <div class="rounded-2xl border border-sky-200 bg-sky-50 p-6">
+      <h2 class="text-xl md:text-2xl font-bold">AI is a Double-Edged Sword — Use It to Build</h2>
+      <p class="mt-2 text-slate-700">
+        Yes, it’s tough out there — especially in IT — as AI replaces repetitive work and some roles become redundant.
+        But it also makes <em>builders</em> superhuman. The best time to build is now.
+      </p>
+      <p class="mt-2 text-slate-700">
+        Come to my events to get empowered, think outside the box, and start your path to success and prosperity.
+        Channel your inner Elon, Sam, or Zuck — and build the future.
+      </p>
+      <div class="mt-4 flex flex-wrap gap-3">
+        <!-- TODO: replace with your real Meetup group URL -->
+        <a href="https://www.meetup.com/" class="px-5 py-3 bg-slate-900 text-white rounded-xl hover:bg-slate-800">Join on Meetup</a>
+        <a href="#speaking" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Book a Keynote/Workshop</a>
+      </div>
+    </div>
+  </section>
+
   <!-- Logos / Social proof (optional) -->
-  <section class="mx-auto max-w-6xl px-4 pb-6">
+  <section class="mx-auto max-w-6xl px-4 pb-6 pt-10">
     <div class="bg-white/70 border border-slate-200 rounded-2xl p-5">
       <p class="text-xs uppercase tracking-wide text-slate-500 text-center">Projects & communities I’ve helped build</p>
       <div class="mt-4 grid grid-cols-2 md:grid-cols-4 gap-4 opacity-80">
@@ -121,10 +142,51 @@
     </div>
   </section>
 
+  <!-- Speaking -->
+  <section id="speaking" class="mx-auto max-w-6xl px-4 py-12">
+    <h2 class="text-2xl md:text-3xl font-bold">Motivational Speaking — Inspire Builders</h2>
+    <p class="mt-2 text-slate-600">
+      My talks are high-energy, practical, and designed to push people beyond comfort zones — so they leave ready to build.
+    </p>
+    <div class="mt-6 grid md:grid-cols-3 gap-6">
+      <div class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
+        <h3 class="font-semibold">Keynote: The Builder’s Edge</h3>
+        <p class="mt-2 text-slate-600">AI replaces tasks, not ambition. How to turn today’s tools into unfair advantage and ship your first version now.</p>
+        <ul class="mt-3 text-slate-600 space-y-1">
+          <li>• Mindset: curiosity, speed, iteration</li>
+          <li>• Tooling: AI co-dev, content, GTM</li>
+          <li>• Action plan: 7-day build challenge</li>
+        </ul>
+      </div>
+      <div class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
+        <h3 class="font-semibold">Workshop: MVP in 2 Weeks</h3>
+        <p class="mt-2 text-slate-600">Hands-on session to define scope, assemble a lean team, and stand up a functional prototype with AI assistance.</p>
+        <ul class="mt-3 text-slate-600 space-y-1">
+          <li>• Scope slicing & acceptance criteria</li>
+          <li>• Delivery rituals & demo cadence</li>
+          <li>• Launch checklist</li>
+        </ul>
+      </div>
+      <div class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
+        <h3 class="font-semibold">Talk: Think Outside the Box</h3>
+        <p class="mt-2 text-slate-600">Mental models to challenge assumptions, spark ideas, and design bold software bets worth testing.</p>
+        <ul class="mt-3 text-slate-600 space-y-1">
+          <li>• Reframe problems</li>
+          <li>• Run tiny experiments</li>
+          <li>• Learn fast, adapt faster</li>
+        </ul>
+      </div>
+    </div>
+    <div class="mt-6 flex flex-wrap gap-3">
+      <a href="https://calendly.com/your-link" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Book a Talk</a>
+      <a href="mailto:your@email.com" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Speaker Enquiries</a>
+    </div>
+  </section>
+
   <!-- Packages -->
   <section id="packages" class="mx-auto max-w-6xl px-4 py-12">
     <h2 class="text-2xl md:text-3xl font-bold">Packages & Pricing (AUD)</h2>
-    <p class="mt-2 text-slate-600">Transparent, no-nonsense pricing. Customize any package after our discovery call.</p>
+    <p class="mt-2 text-slate-600">Transparent, no-nonsense pricing. Customise any package after our discovery call.</p>
     <div class="mt-6 grid md:grid-cols-3 gap-6">
       <div class="bg-white border border-sky-200 rounded-2xl p-6 shadow-sm">
         <h3 class="font-semibold">Clarity Sprint</h3>
@@ -166,73 +228,6 @@
     </div>
   </section>
 
-  <!-- Process -->
-  <section id="process" class="mx-auto max-w-6xl px-4 py-12">
-    <h2 class="text-2xl md:text-3xl font-bold">How We’ll Work</h2>
-    <div class="mt-6 grid md:grid-cols-5 gap-4">
-      <div class="bg-white border border-slate-200 rounded-2xl p-4">
-        <h4 class="font-semibold">1. Discovery</h4>
-        <p class="text-slate-600 mt-1">Context, goals, constraints, and success metrics.</p>
-      </div>
-      <div class="bg-white border border-slate-200 rounded-2xl p-4">
-        <h4 class="font-semibold">2. Strategy</h4>
-        <p class="text-slate-600 mt-1">Problem, segment, JTBD, scope, and risks.</p>
-      </div>
-      <div class="bg-white border border-slate-200 rounded-2xl p-4">
-        <h4 class="font-semibold">3. Team</h4>
-        <p class="text-slate-600 mt-1">Right roles, rituals, and standards to ship.</p>
-      </div>
-      <div class="bg-white border border-slate-200 rounded-2xl p-4">
-        <h4 class="font-semibold">4. MVP Sprint</h4>
-        <p class="text-slate-600 mt-1">2–4 weeks, demos weekly, cut to value.</p>
-      </div>
-      <div class="bg-white border border-slate-200 rounded-2xl p-4">
-        <h4 class="font-semibold">5. Launch</h4>
-        <p class="text-slate-600 mt-1">Onboarding, early GTM, measure & iterate.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Tech & Methods -->
-  <section class="mx-auto max-w-6xl px-4 py-12">
-    <div class="bg-white border border-slate-200 rounded-2xl p-6">
-      <h2 class="text-2xl md:text-3xl font-bold">What I Coach & Oversee</h2>
-      <div class="mt-4 grid md:grid-cols-2 gap-6 text-slate-700">
-        <ul class="space-y-2">
-          <li>• AI-assisted product discovery (market scans, assumption tests)</li>
-          <li>• Lightweight specs, user stories, acceptance criteria</li>
-          <li>• Delivery rituals: planning, code reviews, demos</li>
-          <li>• MVP architecture for speed and iteration</li>
-        </ul>
-        <ul class="space-y-2">
-          <li>• Common stacks: React/TypeScript, Firebase/GCP, Node</li>
-          <li>• Landing pages, onboarding, analytics, feedback loops</li>
-          <li>• Early GTM: waitlists, partnerships, channels</li>
-          <li>• Metrics: activation, retention, north-stars</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials (placeholder) -->
-  <section class="mx-auto max-w-6xl px-4 py-12">
-    <h2 class="text-2xl md:text-3xl font-bold">Founder Feedback</h2>
-    <div class="mt-6 grid md:grid-cols-3 gap-6">
-      <figure class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
-        <blockquote class="text-slate-700">“We cut scope, built the right thing, and launched in weeks — not months.”</blockquote>
-        <figcaption class="text-sm text-slate-500 mt-3">— Founder, SaaS marketplace</figcaption>
-      </figure>
-      <figure class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
-        <blockquote class="text-slate-700">“The team playbook turned chaos into consistent delivery.”</blockquote>
-        <figcaption class="text-sm text-slate-500 mt-3">— CTO, EdTech</figcaption>
-      </figure>
-      <figure class="bg-white border border-slate-200 rounded-2xl p-6 shadow-sm">
-        <blockquote class="text-slate-700">“Clear metrics and fast iterations — we actually shipped.”</blockquote>
-        <figcaption class="text-sm text-slate-500 mt-3">— Founder, Consumer app</figcaption>
-      </figure>
-    </div>
-  </section>
-
   <!-- FAQ -->
   <section id="faq" class="mx-auto max-w-6xl px-4 py-12">
     <h2 class="text-2xl md:text-3xl font-bold">FAQ</h2>
@@ -250,7 +245,7 @@
         <div class="mt-2 text-slate-600">Modern web: React/TypeScript, Firebase/GCP, Node. We’ll choose what fits your constraints and speed.</div>
       </details>
       <details class="bg-white border border-slate-200 rounded-xl p-4">
-        <summary class="cursor-pointer font-semibold">Can we customize a package?</summary>
+        <summary class="cursor-pointer font-semibold">Can we customise a package?</summary>
         <div class="mt-2 text-slate-600">Absolutely — we’ll tailor scope, cadence, and budget after discovery.</div>
       </details>
     </div>
@@ -264,7 +259,7 @@
       <div class="mt-5 flex flex-wrap gap-3">
         <a href="https://calendly.com/your-link" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Book a Call</a>
         <a href="mailto:your@email.com" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Email Me</a>
-        <a href="https://www.linkedin.com/in/your-link" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sergeivo/" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white" rel="noopener">LinkedIn</a>
       </div>
     </div>
   </section>
@@ -272,7 +267,7 @@
   <!-- Footer -->
   <footer class="mx-auto max-w-6xl px-4 pb-10">
     <div class="text-sm text-slate-500">
-      © 2025 Serge Ivo — Software Startup Coach. All rights reserved.
+      © 2025 Serge Ivo — Software Startup Coach & Motivational Speaker. All rights reserved.
       <span class="block mt-1">Privacy: I only use anonymised analytics to improve the site.</span>
     </div>
   </footer>
@@ -282,29 +277,32 @@
   {
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
-    "name": "Serge Ivo — Software Startup Coach",
-    "description": "Coaching for software founders: AI-assisted strategy, team formation, MVP sprints, and launch.",
+    "name": "Serge Ivo — Software Startup Coach & Motivational Speaker",
+    "description": "Coaching for software founders: AI-assisted strategy, team formation, MVP sprints, and launch. Keynotes and workshops that inspire people to build.",
     "areaServed": "Global",
     "url": "https://sergeivo.online/",
     "logo": "https://sergeivo.online/logo.png",
     "image": "https://sergeivo.online/og-image.jpg",
     "sameAs": [
-      "https://www.linkedin.com/in/your-link"
+      "https://www.linkedin.com/in/sergeivo/",
+      "https://www.meetup.com/"
     ],
     "serviceType": "Startup coaching",
     "hasOfferCatalog": {
       "@type": "OfferCatalog",
       "name": "Packages",
       "itemListElement": [
-        {"@type": "Offer", "name": "Clarity Sprint (1 week)", "priceCurrency": "AUD", "price": "1490"},
-        {"@type": "Offer", "name": "MVP Kickstart (4 weeks)", "priceCurrency": "AUD", "price": "5900"},
-        {"@type": "Offer", "name": "Launch Partner (12 weeks)", "priceCurrency": "AUD", "price": "12900"}
+        { "@type": "Offer", "name": "Clarity Sprint (1 week)", "priceCurrency": "AUD", "price": "1490" },
+        { "@type": "Offer", "name": "MVP Kickstart (4 weeks)", "priceCurrency": "AUD", "price": "5900" },
+        { "@type": "Offer", "name": "Launch Partner (12 weeks)", "priceCurrency": "AUD", "price": "12900" },
+        { "@type": "Offer", "name": "Keynote/Workshop (speaking)", "priceCurrency": "AUD", "price": "0", "priceSpecification": { "@type": "PriceSpecification", "priceCurrency": "AUD", "price": "0", "description": "Request a quote" } }
       ]
     },
     "provider": {
       "@type": "Person",
       "name": "Serge Ivo",
-      "jobTitle": "Software Startup Coach"
+      "jobTitle": "Software Startup Coach & Motivational Speaker",
+      "sameAs": ["https://www.linkedin.com/in/sergeivo/"]
     }
   }
   </script>
