--- a/index.html
+++ b/index.html
@@ -58,35 +58,54 @@
   </header>
 
   <!-- Hero -->
-  <section class="mx-auto max-w-6xl px-4 pt-12 pb-10">
-    <div class="grid md:grid-cols-2 gap-10 items-center">
-      <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">
-          Software Startup Coach <span class="text-slate-400">&</span> <span class="text-sky-600">Motivational Speaker</span>
-        </h1>
-        <p class="mt-5 text-lg text-slate-600">
-          I help founders go from idea to launched software product. We’ll crystallise your strategy, form the right team, run a focused MVP sprint, and ship — using AI to speed up everything.
-        </p>
-        <div class="mt-6 flex flex-wrap gap-3">
-          <a href="https://calendar.app.google/5hsvLPKmr5MoQSKUA" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Free 20-min Discovery Call</a>
-          <a href="#speaking" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Book a Talk</a>
-        </div>
-        <p class="mt-3 text-sm text-slate-500">Specialised in <strong>software products only</strong> — web, mobile, SaaS.</p>
+<section class="mx-auto max-w-6xl px-4 pt-12 pb-10">
+  <div class="grid md:grid-cols-2 gap-10 items-center">
+    <div>
+      <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">
+        Software Startup Coach <span class="text-slate-400">&</span> <span class="text-sky-600">Motivational Speaker</span>
+      </h1>
+      <p class="mt-5 text-lg text-slate-600">
+        I help founders go from idea to launched software product. We’ll crystallise your strategy, form the right team, run a focused MVP sprint, and ship — using AI to speed up everything.
+      </p>
+      <div class="mt-6 flex flex-wrap gap-3">
+        <a href="https://calendar.app.google/5hsvLPKmr5MoQSKUA" class="px-5 py-3 bg-sky-600 text-white rounded-xl hover:bg-sky-700">Free 20-min Discovery Call</a>
+        <a href="#speaking" class="px-5 py-3 border border-slate-300 rounded-xl hover:bg-white">Book a Talk</a>
       </div>
-      <div class="md:justify-self-end">
-        <div class="bg-white rounded-2xl border border-slate-200 p-6 shadow-sm">
-          <h3 class="font-semibold">What you get</h3>
-          <ul class="mt-3 space-y-2 text-slate-600">
-            <li>• AI-assisted product strategy & de-risking</li>
-            <li>• Team formation playbook (volunteers, contractors, or hybrid)</li>
-            <li>• 2–4 week MVP sprint: scope, build, demo, iterate</li>
-            <li>• Launch stack: landing, onboarding, feedback loops</li>
-            <li>• GTM & traction experiments that fit your stage</li>
-          </ul>
-        </div>
+      <p class="mt-3 text-sm text-slate-500">Specialised in <strong>software products only</strong> — web, mobile, SaaS.</p>
+    </div>
+
+    <!-- Right column: headshot + value card -->
+    <div class="md:justify-self-end flex flex-col items-center gap-6">
+      <!-- Headshot -->
+      <a href="https://www.linkedin.com/in/sergeivo/" target="_blank" rel="noopener" aria-label="Serge Ivo on LinkedIn">
+        <figure class="relative">
+          <!-- Soft gradient glow -->
+          <span aria-hidden="true" class="absolute inset-0 rounded-full bg-gradient-to-tr from-sky-500/25 to-violet-600/25 blur-xl"></span>
+          <img
+            src="images/serge-ivo.jpg"
+            alt="Serge Ivo — Software Startup Coach & Motivational Speaker"
+            width="320" height="320"
+            class="relative w-40 h-40 md:w-56 md:h-56 rounded-full object-cover ring-4 ring-white shadow-xl"
+            loading="eager" decoding="async"
+          />
+        </figure>
+      </a>
+
+      <!-- What you get card -->
+      <div class="bg-white rounded-2xl border border-slate-200 p-6 shadow-sm w-full">
+        <h3 class="font-semibold">What you get</h3>
+        <ul class="mt-3 space-y-2 text-slate-600">
+          <li>• AI-assisted product strategy & de-risking</li>
+          <li>• Team formation playbook (volunteers, contractors, or hybrid)</li>
+          <li>• 2–4 week MVP sprint: scope, build, demo, iterate</li>
+          <li>• Launch stack: landing, onboarding, feedback loops</li>
+          <li>• GTM & traction experiments that fit your stage</li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- AI Double-Edged Sword Banner -->
   <section id="events" class="mx-auto max-w-6xl px-4">
