--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <h3 class="text-4xl md:text-5xl font-bold text-gray-900 mb-6">Startups & Communities</h3>
         <div class="w-24 h-1 bg-gradient-to-r from-purple-600 to-blue-600 mx-auto mb-8"></div>
         <p class="text-xl text-gray-700 max-w-3xl mx-auto leading-relaxed">
-          Selected initiatives I’ve built or advised. Links only, no logos.
+          Selected initiatives I’ve built or advised.
         </p>
       </div>
 
